<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <artifactId>avaje-jex-parent</artifactId>
    <groupId>io.avaje</groupId>
    <version>2.2-SNAPSHOT</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>

  <artifactId>avaje-jex-jetty</artifactId>

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <jetty.version>11.0.9</jetty.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-jex</artifactId>
      <version>2.2-SNAPSHOT</version>
    </dependency>

    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-server</artifactId>
      <version>${jetty.version}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>
            --add-modules com.fasterxml.jackson.databind
            --add-opens io.avaje.jex.jetty/io.avaje.jex.base=com.fasterxml.jackson.databind
            --add-opens io.avaje.jex.jetty/io.avaje.jex=ALL-UNNAMED
            --add-opens io.avaje.jex.jetty/io.avaje.jex.base=ALL-UNNAMED
            --add-opens io.avaje.jex.jetty/io.avaje.jex.core=ALL-UNNAMED
            --add-opens io.avaje.jex.jetty/io.avaje.jex.routes=ALL-UNNAMED
            --add-opens io.avaje.jex.jetty/io.avaje.jex.jetty=ALL-UNNAMED
          </argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
